
	* shr.el (shr-find-elements): New function.
	(shr-tag-table): Put all the images after the table.
	(shr-tag-table): Really inhibit images inside the table.
	(shr-collect-overlays): Copy over overlays from the TD elements to the
	main document.

	* mm-decode.el (mm-shr): Bind shr-blocked-images to
	gnus-blocked-images.

2010-10-05  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-wash-images): Rescale image from cid too.
	(gnus-html-maximum-image-size): Add this function.
	(gnus-html-put-image): Use gnus-html-maximum-image-size.

	* sieve-manage.el (sieve-manage-capability): Do not bug out when the
	server-value of the capability is nil.

2010-10-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-em): Add <EM> tag.

2010-10-05  Florian Ragwitz  <rafl@debian.org>  (tiny change)

	* sieve-manage.el (sieve-manage-default-stream): Make default stream
	customizable.

	* gnus-html.el (gnus-html-wash-tags): Decode URL entities to avoid
	handing broken links to browse-url.

2010-10-05  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-emacs-completing-read)
	(gnus-iswitchb-completing-read): Use autoload rather than require.

2010-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind libxml-parse-html-region and shr-insert-document for
	Emacs 22 and XEmacs; fbind help-function-arglist for XEmacs 21.4 and
	SXEmacs; fbind ido-completing-read, and bind iswitchb-mode and
	iswitchb-temp-buflist for XEmacs.

	* gnus-util.el (gnus-completing-read-function): Exclude
	gnus-icompleting-read and gnus-ido-completing-read from candidates for
	XEmacs since iswitchb.el is very old and ido.el is unavailable in
	XEmacs.

	* gnus-registry.el (gnus-registry-install-nnregistry): Rewrite so as
	not to use `delete-dups' that is unavailable in XEmacs 21.4.

	* gnus-html.el: Don't require help-fns under XEmacs.
	(gnus-html-schedule-image-fetching): Work for XEmacs.

	* mm-decode.el (mm-shr): Decode contents by charset.
