@@ -265,10 +265,6 @@ in the @code{sieve} group (@kbd{M-x customize-group RET sieve RET}):
 
 @table @code
 
-@item sieve-manage-default-user
-@vindex sieve-manage-default-user
-Sets the default username.
-
 @item sieve-manage-default-port
 @vindex sieve-manage-default-port
 Sets the default port to use, the suggested port number is @code{2000}.
@@ -296,10 +292,6 @@ Check if a server is open or not.
 @item sieve-manage-close
 @findex sieve-manage-close
 Close a server connection.
-
-@item sieve-manage-authenticate
-@findex sieve-manage-authenticate
-Authenticate to the server.
 
 @item sieve-manage-capability
 @findex sieve-manage-capability
